--- a/client/src/components/Pagination/Pagination.css
+++ b/client/src/components/Pagination/Pagination.css
@@ -1,8 +1,14 @@
+.container-pagination {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .pagination {
-  width: 100%;
+  width: 80%;
   display: flex;
   align-items: center;
   cursor: pointer;
+  margin-right: 70px;
 }
 
 .link-navigation {
